[project]
name = "uniconndbbridge"
version = "0.1.0"
description = "あらゆる認証方式に対応した汎用 SQLAlchemy データベースマネージャ"
authors = [
    {name = "vavavavavavavavava",email = "159633814+vavavavavavavavava@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
