[tool.poetry]
name = "uniconndbbridge"
version = "25.6.0"
description = "Universal auth-ready SQLAlchemy Database Manager"
authors = ["vavavavavavavavava <159633814+vavavavavavavavava@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "uniconndbbridge"}]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^2.0"
typing-extensions = "^4.0"

[tool.poetry.extras]
postgres = ["psycopg2-binary>=2.9"]
postgres_async = ["asyncpg>=0.29"]
mysql = ["mysqlclient>=2.2"]
mysql_async = ["aiomysql>=0.2"]
sqlite_async = ["aiosqlite>=0.20"]
oracle = ["python-oracledb>=2.0"]
mssql = ["pyodbc>=5.0"]
mssql_async = ["aioodbc>=0.4"]
kerberos = ["pykerberos>=1.2"]
aws = ["boto3>=1.34", "botocore>=1.34"]
gcp = ["google-auth>=2.0"]
azure = ["azure-identity>=1.15"]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "pymdown-extensions>=10.7",
    "mkdocs-git-revision-date-localized-plugin>=1.2"
]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-cov = "^4.1"
pytest-asyncio = "^0.21"
mypy = "^1.5"
ruff = "^0.0.285"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=uniconndbbridge --cov-report=term-missing"
